[project]
name = "reporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "ipython>=8.32.0",
    "langchain>=0.3.19",
    "langchain-anthropic>=0.3.8",
    "langchain-community>=0.3.18",
    "langchain-huggingface>=0.1.2",
    "langchain-redis>=0.2.0",
    "langchain-text-splitters>=0.3.6",
    "langgraph>=0.2.74",
    "pypdf>=5.3.0",
]

[project.scripts]
reporter = "reporter.main:process_earnings_report"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
