[project]
name = "reporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "ipython>=8.32.0",
    "langchain>=0.3.19",
    "langchain-anthropic>=0.3.8",
    "langchain-community>=0.3.18",
    "langchain-ollama>=0.2.3",
    "langchain-redis>=0.2.0",
    "langchain-text-splitters>=0.3.6",
    "langgraph>=0.2.74",
    "pydantic-settings>=2.8.0",
    "pypdf>=5.3.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
reporter = "reporter.main:process_earnings_report"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.8",
]
